# surrealdb.net

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  Directory.Build.props  Directory.Packages.props  GET_STARTED.md  README.md  SurrealDB.NET.sln  SurrealDB.sln  SurrealDb.sln  deny.toml  disable_embedded_mode.sh  docker-compose.yaml  mise.toml  prepare_embedded_benchmarks.ps1  prepare_embedded_benchmarks.sh
.config/: dotnet-tools.json
.github/: PULL_REQUEST_TEMPLATE.md
SurrealDatabase.Net/: SurrealDatabase.Net.csproj
SurrealDb.Benchmarks/: BaseBenchmark.cs  ColdStartBenchmark.cs  CreateBench.cs  DeleteBench.cs  Program.cs  QueryBench.cs  ScenarioBench.cs  SelectBench.cs  SurrealDb.Benchmarks.csproj  UpsertBench.cs  Usings.cs
SurrealDb.Embedded.InMemory/: NativeMethods.g.cs  README.md  SurrealDb.Embedded.InMemory.csproj  SurrealDbMemoryClient.cs  Usings.cs
SurrealDb.Embedded.Internals/: ByteBuffer.cs  EmbeddedSessionInfo.cs  EmbeddedSessionInfoProvider.cs  EmbeddedSessionInfos.cs  Fake.cs  NativeBindings.cs  NativeMethods.cs  PlatformConfiguration.cs  SurrealDb.Embedded.Internals.csproj  SurrealDbEmbeddedEngine.cs  SurrealDbEmbeddedEngineConfig.cs  packages.lock.json
SurrealDb.Embedded.RocksDb/: NativeMethods.g.cs  README.md  SurrealDb.Embedded.RocksDb.csproj  SurrealDbRocksDbClient.cs  packages.lock.json
SurrealDb.Embedded.SurrealKv/: NativeMethods.g.cs  README.md  SurrealDb.Embedded.SurrealKv.csproj  SurrealDbKvClient.cs  packages.lock.json
SurrealDb.Examples.Blazor.Server/: Program.cs  README.md  SurrealDb.Examples.Blazor.Server.csproj  _Imports.razor  appsettings.Development.json  counter.surql  packages.lock.json  schema.surql
SurrealDb.Examples.Console/: Program.cs  README.md  SurrealDb.Examples.Console.csproj  packages.lock.json
SurrealDb.Examples.MinimalApis/: Program.cs  README.md  SurrealDb.Examples.MinimalApis.csproj  SurrealDb.Examples.MinimalApis.http  appsettings.json  packages.lock.json
SurrealDb.Examples.TodoApi.Aot/: Program.cs  README.md  SurrealDb.Examples.TodoApi.Aot.csproj  SurrealDb.Examples.TodoApi.Aot.http  appsettings.json  packages.lock.json
SurrealDb.Examples.WeatherApi/: Program.cs  README.md  SurrealDb.Examples.WeatherApi.csproj  appsettings.Development.json  appsettings.json  packages.lock.json
SurrealDb.Instrumentation/: README.md  SurrealDb.Instrumentation.csproj  SurrealDbClientMeterProviderBuilderExtensions.cs  SurrealDbClientTraceInstrumentationOptions.cs  TracerProviderBuilderExtensions.cs
SurrealDb.Net.Tests/: InfoTests.cs  (+50 more)
rust-embedded/memory/: Cargo.toml  build.rs
rust-embedded/memory/src/: lib.rs
rust-embedded/memory/src/app/: mod.rs
rust-embedded/memory/src/bindgen/: alloc.rs  byte_buffer.rs  callback.rs  csharp_to_rust.rs  free.rs  mod.rs
rust-embedded/memory/src/cbor/: mod.rs
rust-embedded/memory/src/err/: mod.rs
rust-embedded/memory/src/methods/: create.rs  delete.rs  merge.rs  mod.rs  patch.rs  ping.rs  query.rs  select.rs  set.rs  unset.rs  update.rs  use_ns_db.rs  version.rs
rust-embedded/memory/src/models/: method.rs
rust-embedded/memory/src/runtime/: db.rs  engines.rs  mod.rs
rust-embedded/rocksdb/: Cargo.toml  build.rs
rust-embedded/rocksdb/src/: lib.rs
rust-embedded/rocksdb/src/bindgen/: callback.rs
rust-embedded/shared/: Cargo.toml  build.rs
rust-embedded/shared/src/: lib.rs
rust-embedded/shared/src/app/: mod.rs
rust-embedded/shared/src/bindgen/: byte_buffer.rs  callback.rs  csharp_to_rust.rs  free.rs
rust-embedded/shared/src/cbor/: mod.rs
rust-embedded/shared/src/models/: connection_options.rs  method.rs  mod.rs
rust-embedded/shared/src/runtime/: engines.rs  mod.rs
(+1105 files in other folders)
