[package]
name = "memory"
publish = false
version = "1.5.4"
edition = "2021"
rust-version = "1.77.0"
license-file = "../../LICENSE"
resolver = "2"

[dependencies]
cargo_metadata = "0.18.1"
ciborium = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
surrealdb = { version = "=1.5.4", default-features = false, features = ["kv-mem", "sql2"] }
surrealdb-core = { version = "=2.0.0-1.5.4", default-features = false }
tokio = { version = "1.37.0" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "surrealdb_unstable"]
