[package]
name = "surreal_memory"
publish = false
version = "1.5.4"
edition = "2021"
rust-version = "1.77.0"
license-file = "../../LICENSE"
resolver = "2"

[dependencies]
ciborium = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
surrealdb = { version = "=1.5.4", default-features = false, features = ["kv-mem", "sql2"] }
tokio = { version = "1.37.0" }
uuid = "1.8.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cargo-lock = "9.0.0"
csbindgen = "1.9.1"
