[package]
name = "surreal_rocksdb"
publish = false
version = "2.0.4"
edition = "2021"
rust-version = "1.80.1"
license-file = "../../LICENSE"
resolver = "2"

[dependencies]
ciborium = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
surrealdb = { version = "=2.0.4", default-features = false, features = ["kv-rocksdb"] }
tokio = { version = "1.40.0" }
uuid = "1.10.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cargo-lock = "9.0.0"
csbindgen = "1.9.1"
