[package]
name = "shared"
publish = false
version = "2.4.0"
edition = "2024"
rust-version = "1.91.0"
license-file = "../../LICENSE"
resolver = "2"

[dependencies]
arc-swap = "1.7.1"
channel = { version = "2.3.1", package = "async-channel" }
ciborium = "0.2.2"
num_cpus = "1.17.0"
once_cell = "1.21.3"
surrealdb = { version = "=2.4.0", default-features = false }
tokio = { version = "1.44.2" }
uuid = "1.13.1"

[build-dependencies]
cargo-lock = "10.1.0"
csbindgen = "1.9.5"

[features]
memory = ["surrealdb/kv-mem"]
rocksdb = ["surrealdb/kv-rocksdb"]
surrealkv = ["surrealdb/kv-surrealkv"]
