[package]
name = "shared"
publish = false
version = "3.0.0"
edition = "2024"
rust-version = "1.91.0"
license-file = "../../LICENSE"
resolver = "2"

[dependencies]
anyhow = "1.0.100"
channel = { version = "2.3.1", package = "async-channel" }
num_cpus = "1.17.0"
once_cell = "1.21.3"
surrealdb = { package = "surrealdb-core", version = "=3.0.0", default-features = false }
surrealdb-types = "=3.0.0"
tokio = { version = "1.44.2" }
uuid = "1.13.1"

[build-dependencies]
cargo-lock = "10.1.0"
csbindgen = "1.9.5"

[features]
memory = ["surrealdb/kv-mem"]
rocksdb = ["surrealdb/kv-rocksdb"]
surrealkv = ["surrealdb/kv-surrealkv"]
